[package]
name = "kobold-courts"
version = "0.1.0"
edition = "2021"
description = "Court/casefile machinery: casefile schema, receipt doctrine, claim-ladder, negative-capability registry, DSSE/in-toto packet generation, court runners, diffing, and audit reports."
authors = ["infinityabundance"]
license = "Apache-2.0"
repository = "https://github.com/infinityabundance/kobold-courts"
readme = "README.md"
publish = false  # empty scaffold; flip to publishable once the implementation lands

[dependencies]
# Dependency rule: kobold-* MAY depend on gnucobol-rs; gnucobol-rs MUST NOT depend on kobold-*.
# Activate when the implementation is extracted, e.g.: gnucobol-rs = "0.7"
