[package]
name = "kobold-courts"
version = "0.1.0"
edition = "2021"
description = "Court/casefile machinery: casefile schema, receipt doctrine, claim-ladder, negative-capability registry, and court validation/audit -- the forensic proof method as a reusable library."
authors = ["infinityabundance"]
license = "Apache-2.0"
repository = "https://github.com/infinityabundance/kobold-courts"
readme = "README.md"
publish = false  # flip to publishable once the API stabilizes

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
